fix alignment on message, update personalization message

--- a/styles/mgreetings.css
+++ b/styles/mgreetings.css
@@ -1,22 +1,4 @@
-﻿body {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    font-size: 100%;
-}
-
-#container {
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
-}
-
-#logo {
-    margin: 12.5px auto 6.25px auto;
-    min-height: 50px;
-    max-height: 75px;
-    display: block;
-}
-
+﻿/*type follows 8:9 modular scale*/
 h1 {
     font-family: 'Roboto Slab', sans-serif;
     font-weight: 700;
@@ -31,14 +13,45 @@ h2 {
     line-height: 120%;
 }
 
+body {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 100%;
+}
+
+footer {
+    color: #6D6E70;
+    font-size: 79%;
+    margin: 50px 0 20px 0;
+}
+
+#container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
+
+#logo {
+    margin: 20px auto;
+    min-height: 50px;
+    max-height: 75px;
+    display: block;
+}
+
 #card {
-    margin: 10px 0 10px 0;
+    margin: auto;
+    width: 100%;
 }
 
 #stage {
     margin: 10px 0 10px 0;
 }
 
+#center-wrapper {
+    width: 90%;
+    margin: 0 auto;
+    position: inherit;
+}
 
 button {
     background-color: #6DA673;
@@ -50,18 +63,13 @@ button {
     
     border: 0;
     margin: 10px auto 10px auto;
-    padding: 15px;
+    padding: 15px 20px;
 }
 
 hr {
     margin-top: 20px;
     margin-bottom: 20px;
     color: #6D6E70;
-}
-
-footer {
-    color: #6D6E70;
-    font-size: 80%;
 }
 
 a {
@@ -78,6 +86,13 @@ a {
 }
 
 @media screen and (max-width: 400px) {
+    h1 {
+    font-size: 1.602em;
+}
+
+h2 {
+    font-size: 1.266em;
+}
     button {
         width: 100%;
     }
